--- a/src/main/resources/static/html/catalog.html
+++ b/src/main/resources/static/html/catalog.html
@@ -30,7 +30,7 @@
     <tbody>
       <tr>
         <td>首页</td>
-        <td><a href="index.html" target="_blank">index.html</td>
+        <td><a href="index.html" target="_blank">index.html</a></td>
       </tr>
       
       <tr>
@@ -38,15 +38,15 @@
       </tr>
       <tr>
         <td>列表</td>
-        <td><a href="jie/index.html" target="_blank">jie/index.html</td>
+        <td><a href="jie/index.html" target="_blank">jie/index.html</a></td>
       </tr>
       <tr>
         <td>详情</td>
-        <td><a href="jie/detail.html" target="_blank">jie/detail.html</td>
+        <td><a href="jie/detail.html" target="_blank">jie/detail.html</a></td>
       </tr>
       <tr>
         <td>发帖/编辑</td>
-        <td><a href="jie/add.html" target="_blank">jie/add.html</td>
+        <td><a href="jie/add.html" target="_blank">jie/add.html</a></td>
       </tr>
 
       <tr>
@@ -54,23 +54,23 @@
       </tr>
       <tr>
         <td>注册</td>
-        <td><a href="user/reg.html" target="_blank">user/reg.html</td>
+        <td><a href="user/reg.html" target="_blank">user/reg.html</a></td>
       </tr>
       <tr>
         <td>登入</td>
-        <td><a href="user/login.html" target="_blank">user/login.html</td>
+        <td><a href="user/login.html" target="_blank">user/login.html</a></td>
       </tr>
       <tr>
         <td>找回密码</td>
-        <td><a href="user/forget.html" target="_blank">user/forget.html</td>
+        <td><a href="user/forget.html" target="_blank">user/forget.html</a></td>
       </tr>
       <tr>
         <td>我的主页</td>
-        <td><a href="user/home.html" target="_blank">user/home.html</td>
+        <td><a href="user/home.html" target="_blank">user/home.html</a></td>
       </tr>
       <tr>
         <td>用户中心</td>
-        <td><a href="user/index.html" target="_blank">user/index.html</td>
+        <td><a href="user/index.html" target="_blank">user/index.html</a></td>
       </tr>
       <tr>
         <td>基本设置</td>
@@ -90,19 +90,19 @@
       </tr>
       <tr>
         <td>案例</td>
-        <td><a href="case/case.html" target="_blank">case/case.html</td>
+        <td><a href="case/case.html" target="_blank">case/case.html</a></td>
       </tr>
       <tr>
         <td>提示</td>
-        <td><a href="other/tips.html" target="_blank">other/tips.html</td>
+        <td><a href="other/tips.html" target="_blank">other/tips.html</a></td>
       </tr>
       <tr>
         <td>公告</td>
-        <td><a href="other/notice.html" target="_blank">other/notice.html</td>
+        <td><a href="other/notice.html" target="_blank">other/notice.html</a></td>
       </tr>
       <tr>
         <td>404</td>
-        <td><a href="other/404.html" target="_blank">other/404.html</td>
+        <td><a href="other/404.html" target="_blank">other/404.html</a></td>
       </tr>
     </tbody>
   </table>
